# TAI_Project3

./: .gitignore  CMakeLists.txt  FCMModel.cpp  FCMModel.h  Makefile  MetaClass.cpp  MetaClass.old  README.md  RFCMModel.cpp  RFCMModel.h  config_template.json  editor.cpp  fcm.cpp  generate_synthetic_data.sh  generate_synthetic_dna.cpp  generator.cpp  gzip_tree.newick  main.cpp  notas.txt  plots.py  requirements.txt  synthetic.sh  tests  tests.cpp  todo.txt  utils.cpp  utils.h  visualize_results.py
apps/: CMakeLists.txt  MetaClass.cpp  build_tree.cpp  compute_ncd.cpp  extract_features.cpp  music_id.cpp  tests.cpp
code_before/: fcm  fcm.cpp
config/: feature_extraction_maxfreq.json  feature_extraction_maxfreq_default.json  feature_extraction_maxfreq_highres.json  feature_extraction_spectral.json  feature_extraction_spectral_default.json  feature_extraction_spectral_highres.json
configs/: config_template.json  small_config.json
generate_plots/: plot_complextity_profile.py  plots.py
getSongs/: README.md  download_songs.cpp  songs.txt
include/core/: FFTExtractor.h  FeatureExtractor.h  MaxFreqExtractor.h  NCD.h  SpectralExtractor.h  TreeBuilder.h  WAVReader.h
include/utils/: CLIParser.h  CompressorWrapper.h  NoiseInjector.h  Segmenter.h
parameter_plots/: detailed_analysis_report.txt
project1/: Makefile  README.md  RFCMModel.h  editor.cpp  fcm.cpp  generator.cpp  tests.cpp
project1/assets/: TAI_Project1_diagrams.drawio
project1/sequences/: obras_camoes_III.txt
project1/sequences/camilo_castelo/: amor_de_perdicao.txt  amor_de_salvacao.txt  arrependimento.txt  gratidao.txt  olho_de_vidro.txt
project2/: .gitignore  Makefile  MetaClass.cpp  MetaClass.h
project2/apps/: CMakeLists.txt
project2/configs/: config_template.json  final_config.json
project2/results/latest/: info.txt
project2/results/old/: test_results_20250407_153926.json
project2/src/utils/: dna_compressor.h  interface_utils.cpp  interface_utils.h  io_utils.h  test_utils.cpp
project2/visualization/: plot_nrc.py
results/: .gitignore  automation_summary_20250612_201715.md  beatles_test.txt  billie_test.txt  eminem_test.txt  eminem_test_bin.txt  test_results.csv  test_results_20250407_181148.json
results/batch_youtube/: accuracy_metrics_gzip.json  extraction_config.txt  sample_Billie Eilish - bad guy (Lyrics)_spectral_results.csv  sample_Eminem - Lose Yourself (Lyrics)_spectral_results.csv  sample_Led Zeppelin- Kashmir Lyrics_spectral_results.csv  sample_The Beatles - Blackbird (lyrics)_spectral_results.csv  summary_gzip.txt
results/latest/: chunk_analysis.json  cross_comparison.json  info.txt  test_results.json  top_organisms_results.json
results/latest/symbol_info/: rank10_NC_029618.1_Lake_Sarah-associated_circular_molecule_7_.csv  rank1_NC_001348.1_Human_herpesvirus_3,_complete_genome.csv  rank1_OR353425.1_Octopus_vulgaris_mitochondrion,_complete_genome.csv  rank2_NC_001348.1_Human_herpesvirus_3,_complete_genome.csv  rank4_Super_ISS_Si1240.csv  rank4_Super_ISS_Si1240.csv  (+7 more)
results/old/: metaclass_ranks.md  test_results_20250401_133812.json  test_results_20250406_144759.json
results/plots/: metrics_summary.txt
results/youtube_full_test/: accuracy_report.json  lzma_accuracy.json
results/youtube_genre_analysis/: genre_report.txt
samples/synthetic/: synthetic_db.txt  synthetic_meta.txt
scripts/: batch_identify.sh  calculate_accuracy.py  compare_compressors.sh  download_songs.cpp  evaluate_parameters.py  evaluate_system.sh  extract_sample.sh  full_youtube_test.sh  generate_optimal_configs.py  generate_plots.py  generate_plots_genres.py  generate_synthetic_data.sh  generate_test_plots.sh  plots.py  quick_param_eval.sh  rebuild.sh  requirements.txt  run.sh  setup.sh  songs.txt  songs_genre.txt  tests.sh  tree_builder.sh  visualize_parameters.py
sequences/: obras_camoes_II.txt
sequences/camilo_castelo/: queda_anjo.txt  sangue.txt
src/: CMakeLists.txt
src/core/: FCMModel.h  FFTExtractor.cpp  FeatureExtractor.cpp  MaxFreqExtractor.cpp  NCD.cpp  SpectralExtractor.cpp  TreeBuilder.cpp  WAVReader.cpp
src/utils/: CLIParser.cpp  CompressorWrapper.cpp  NoiseInjector.cpp  Segmenter.cpp  dna_compressor.cpp  io_utils.cpp  io_utils.h  test_utils.h  utils.cpp  utils.h
test_configs/: config_template.json  small_config.json
tests/: README.md  complete_test.cpp  complete_test_summary.txt  run_all_tests.sh  simple_test.cpp  test_compression.sh  test_compression_simpler_white.sh  test_feature_extraction.sh  test_full_tracks_dataset.sh  test_parameter_analysis.sh  test_plots.sh  test_samples_dataset.sh  test_small_dataset.sh  youtube_test.cpp
tests/results_samples_dataset/: comprehensive_report.md
tests/results_small_dataset/: comprehensive_report.md  test_log.txt
tests/simpler_tests/: test_parameter_analysis_simpler_full_tracks_clean.sh
visualization/: README.md  data_handler.py  plot_chunk_analysis.py  plot_heatmap.py  plot_organism_info.py  plot_performance.py  plot_tree.py  requirements.txt  table_top_organisms.py  visualize_results.py
visualization_results/latest/: summary.txt
(+2531 files in other folders)
